@@ -1,11 +1,17 @@
 # vim: set noexpandtab:
 
+2012-07-10 Steve
+	* Added PASS_HotSpot flag
+	* Added unbiased impact parameters
+	* wPileup2fb -> wPileup1fb
+	* Tagging SusyNtuple-00-00-12
+
 2012-07-08 Anyes
 	* SusyNtAna: add function to debug event list
 	* SusyNtAna: move declaration of baseJets to header
 	* Add TGuiUtils
 	* Add McTruthClassifier
-s	
+
 2012-07-06 Steve
 	* Deleted 2011 trigger bits (we were almost out of space)
 	* Added isBJet function, changed definition to use MV1 > 0.905363
